--- a/kadai4/menu.html
+++ b/kadai4/menu.html
@@ -3,10 +3,8 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="menu.css">
-<title>リストサンプル</title>
+<title>メニュー課題</title>
 </head>
-
-<!-- 実際には#にURLを記述 -->
 
 <body>
 <ul class="ddmenu">
